# websitedummy

./: .gitignore  Procfile  README.md  README_DEPLOY.md  config.py  get_photos.sh  market_indices.py  quick_server.py  sample_sp500_data_20250802_211446.json  sp500_fetcher.py  sp500_server.py  sp500_stocks.html  test_api.py  tic-tac-toe-v2.html  tic_tac_toe.html
backend/: fly.toml  pyproject.toml
backend/app/: main.py
frontend/: index.html  package.json
frontend/src/: App.tsx  SimpleApp.tsx  main.tsx
