[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
pillow = "^11.3.0"
opencv-python-headless = "^4.12.0.88"
python-multipart = "^0.0.20"
requests = "^2.32.4"
openai = "^1.99.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
